--- a/Assets/UI Toolkit/PauseMenu.uxml
+++ b/Assets/UI Toolkit/PauseMenu.uxml
@@ -12,9 +12,12 @@
                 <engine:VisualElement style="justify-content: center; align-self: flex-start; align-items: stretch; min-width: 200px;">
                     <engine:Button text="Settings" name="Settings" class="button" style="align-self: stretch;" />
                 </engine:VisualElement>
-                <engine:VisualElement name="ShiftCameraHorizontally" class="horizontal menuItem" style="margin-top: 30px;">
+                <engine:VisualElement name="ShiftCameraHorizontally" enabled="false" class="horizontal menuItem" style="margin-top: 30px;">
                     <engine:Label text="Camera Zoom" style="margin-top: 0;" />
                     <engine:SliderInt value="50" high-value="100" fill="true" class="SliderMenu" style="min-width: 100px; margin-left: 10px; margin-top: 1px; margin-right: 1px; margin-bottom: 1px; align-self: stretch;" />
+                </engine:VisualElement>
+                <engine:VisualElement style="justify-content: center; align-self: flex-start; align-items: stretch; min-width: 200px;">
+                    <engine:Button text="Quit To Main Menu" name="Quit" class="button" style="align-self: stretch;" />
                 </engine:VisualElement>
             </engine:VisualElement>
         </engine:VisualElement>
