--- a/Assets/UI Toolkit/PauseMenu.uxml
+++ b/Assets/UI Toolkit/PauseMenu.uxml
@@ -11,6 +11,7 @@
                 </engine:VisualElement>
                 <engine:VisualElement style="justify-content: center; align-self: flex-start; align-items: stretch; min-width: 200px;">
                     <engine:Button text="Settings" name="Settings" class="button" style="align-self: stretch;" />
+                    <engine:Button text="Center Camera" name="CCamera" class="button" style="align-self: stretch;" />
                 </engine:VisualElement>
                 <engine:VisualElement name="ShiftCameraHorizontally" enabled="false" class="horizontal menuItem" style="margin-top: 30px;">
                     <engine:Label text="Camera Zoom" style="margin-top: 0;" />
