--- a/Assets/UI Toolkit/MainMenu.uxml
+++ b/Assets/UI Toolkit/MainMenu.uxml
@@ -6,7 +6,7 @@
                 <ui:VisualElement class="header text_white" style="flex-grow: 1;">
                     <ui:Label text="Word Search" class="title" style="-unity-text-align: upper-center;" />
                     <ui:Button text="New Game" name="Start" class="button" style="padding-right: 10px; padding-left: 10px;" />
-                    <ui:Button text="Quit Game" name="Quit" class="button" style="margin-top: 30px;" />
+                    <ui:Button text="Quit" name="Quit" class="button" style="margin-top: 30px;" />
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
