--- a/Assets/UI Toolkit/Styles/StyleMainText.uss
+++ b/Assets/UI Toolkit/Styles/StyleMainText.uss
@@ -12,6 +12,8 @@
     color: rgb(244, 244, 244);
     text-shadow: 10px 2px 0 rgb(0, 0, 0);
     font-size: 18px;
+    -unity-text-outline-width: 0.5px;
+    -unity-text-outline-color: rgb(214, 243, 237);
 }
 
 .header {
@@ -32,7 +34,7 @@
 }
 
 .title {
-    font-size: 32px;
+    font-size: 40px;
 }
 
 .darkbg {
