Congrats you won message, and pauses game after win

--- a/Assets/UI Toolkit/ChooseBoard.uxml
+++ b/Assets/UI Toolkit/ChooseBoard.uxml
@@ -24,8 +24,10 @@
                     <engine:VisualElement style="flex-grow: 1; min-height: 400px;">
                         <engine:VisualElement name="VisualElement" style="flex-grow: 0; flex-direction: row;">
                             <engine:VisualElement style="flex-grow: 1; flex-direction: row;">
-                                <engine:Label text="Categories" style="margin-bottom: 2px; padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px; margin-right: 20px;" />
-                                <engine:Button text="Random" name="PickRandom" class="button" style="padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px; margin-top: 2px; margin-right: 2px; margin-bottom: 2px; margin-left: 4px;" />
+                                <engine:Label text="Categories" style="margin-bottom: 2px; padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px; margin-right: 10px;" />
+                                <engine:Button text="Random" name="PickRandom" class="button" style="padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px; margin-top: 2px; margin-right: 10px; margin-bottom: 2px; margin-left: 4px;" />
+                                <engine:Toggle name="Diagonal" text="Diagonal" />
+                                <engine:Toggle name="Reversed" text="Reversed" />
                             </engine:VisualElement>
                             <engine:VisualElement style="max-width: 30%;">
                                 <engine:VisualElement style="flex-grow: 1; flex-direction: column;">
