--- a/Assets/UI Toolkit/Styles/StyleMainText.uss
+++ b/Assets/UI Toolkit/Styles/StyleMainText.uss
@@ -5,7 +5,6 @@
 .text_aliceblue {
     color: rgb(214, 243, 237);
     text-shadow: 10px 2px 0 rgb(0, 0, 0);
-    font-size: 18px;
 }
 
 .text_white {
@@ -31,6 +30,17 @@
 
 .unity-list-view__empty-label {
     display: none;
+}
+
+.text_aliceblue {
+    color: rgb(214, 243, 237);
+    text-shadow: 10px 2px 0 rgb(0, 0, 0);
+}
+
+.text_aliceblue {
+    color: rgb(214, 243, 237);
+    text-shadow: 10px 2px 0 rgb(0, 0, 0);
+    font-size: 18px;
 }
 
 .title {
