Save board as file for later

--- a/Assets/UI Toolkit/PauseMenu.uxml
+++ b/Assets/UI Toolkit/PauseMenu.uxml
@@ -12,6 +12,7 @@
                 <engine:VisualElement style="justify-content: center; align-self: stretch; align-items: stretch; min-width: 200px;">
                     <engine:Button text="Settings" name="Settings" class="button" style="align-self: stretch;" />
                     <engine:Button text="Center Camera" name="CCamera" class="button" style="align-self: stretch;" />
+                    <engine:Button text="Save Board" name="SaveBoard" class="button" style="align-self: stretch;" />
                 </engine:VisualElement>
                 <engine:VisualElement class="horizontal" style="min-width: 200px;">
                     <engine:Button text="Quit" name="Quit" class="button" style="flex-grow: 1; flex-shrink: 1; margin-right: 20%; margin-left: 20%;" />
