chose random category now searches for it, +category search works, fixed tree BG

--- a/Assets/UI Toolkit/ChooseBoard.uxml
+++ b/Assets/UI Toolkit/ChooseBoard.uxml
@@ -1,6 +1,7 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/Styles/StyleMainText.uss?fileID=7433441132597879392&amp;guid=a30bf1fe6ffa7c048b5a8596bc92c73b&amp;type=3#StyleMainText" />
     <Style src="project://database/Assets/UI%20Toolkit/Styles/SliderCustom.uss?fileID=7433441132597879392&amp;guid=02e4696af2941ce40b9fa8f15f9c85ba&amp;type=3#SliderCustom" />
+    <Style src="project://database/Assets/UI%20Toolkit/Styles/TreeViewStyles.uss?fileID=7433441132597879392&amp;guid=5bd59209bda529d449c484dd1a514a10&amp;type=3#TreeViewStyles" />
     <engine:VisualElement style="flex-grow: 1; background-color: rgba(11, 10, 10, 0.4);">
         <engine:VisualElement class="header text_white" style="top: 2%;">
             <engine:VisualElement>
@@ -26,8 +27,8 @@
                             <engine:VisualElement style="flex-grow: 1; flex-direction: row;">
                                 <engine:Label text="Categories" style="margin-bottom: 2px; padding-top: 4px; padding-right: 4px; padding-bottom: 4px; padding-left: 4px; margin-right: 10px; align-self: center;" />
                                 <engine:Button text="Random" name="PickRandom" class="button" style="padding-top: 8px; padding-right: 8px; padding-bottom: 8px; padding-left: 8px; margin-top: 2px; margin-right: 10px; margin-bottom: 2px; margin-left: 4px;" />
-                                <engine:Toggle name="Diagonal" text="Diagonal" />
-                                <engine:Toggle name="Reversed" text="Reversed" />
+                                <engine:Toggle name="Diagonal" text="Diagonal" class="buttonBeside" />
+                                <engine:Toggle name="Reversed" text="Reversed" class="buttonBeside" />
                             </engine:VisualElement>
                             <engine:VisualElement style="max-width: 30%;">
                                 <engine:VisualElement style="flex-grow: 1; flex-direction: column;">
@@ -35,7 +36,8 @@
                                 </engine:VisualElement>
                             </engine:VisualElement>
                         </engine:VisualElement>
-                        <engine:TreeView name="TreeView" show-alternating-row-backgrounds="ContentOnly" virtualization-method="DynamicHeight" />
+                        <engine:TreeView name="TreeView" show-alternating-row-backgrounds="None" virtualization-method="DynamicHeight" class="SameBGColor" />
+                        <engine:Label text="There is nothing here" name="TreeEmpty" class="title error_text" style="-unity-text-align: upper-center;" />
                     </engine:VisualElement>
                 </engine:VisualElement>
             </engine:VisualElement>
