--- a/Assets/UI Toolkit/PauseMenuHelp.uxml
+++ b/Assets/UI Toolkit/PauseMenuHelp.uxml
@@ -1,7 +1,12 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/Styles/StyleMainText.uss?fileID=7433441132597879392&amp;guid=a30bf1fe6ffa7c048b5a8596bc92c73b&amp;type=3#StyleMainText" />
-    <ui:VisualElement picking-mode="Ignore" class="header text_aliceblue" style="flex-grow: 1; margin-top: 1%; margin-right: 1%; margin-bottom: 1%; margin-left: 1%; flex-direction: row;">
+    <ui:VisualElement picking-mode="Ignore" class="header text_aliceblue textOutline" style="flex-grow: 1; margin-top: 1%; margin-right: 1%; margin-bottom: 1%; margin-left: 1%; flex-direction: row;">
         <ui:VisualElement name="LeftWing" enabled="true" picking-mode="Ignore" style="flex-grow: 1; align-items: flex-start; margin-top: 5%;">
+            <ui:Label text="Select a Word" picking-mode="Ignore" name="Label" />
+            <ui:VisualElement picking-mode="Ignore" style="flex-grow: 0; margin-left: 1%; flex-direction: column;">
+                <ui:Label text="Click on Begining and End" />
+                <ui:Label text="Click and Hold from Begining to End" />
+            </ui:VisualElement>
             <ui:Label text="Zoom" picking-mode="Ignore" />
             <ui:VisualElement picking-mode="Ignore" style="flex-grow: 0; margin-left: 1%; flex-direction: column;">
                 <ui:VisualElement picking-mode="Ignore" style="flex-grow: 0; flex-direction: row;">
