--- a/Assets/UI Toolkit/SettingsGame.uxml
+++ b/Assets/UI Toolkit/SettingsGame.uxml
@@ -8,6 +8,9 @@
                     <Bindings />
                 </engine:Label>
                 <engine:VisualElement style="flex-grow: 1;">
+                    <engine:DropdownField label="Resolution" index="0" choices="1920 x 1080" class="buttonBeside" style="font-size: 20px;" />
+                    <engine:DropdownField label="Language" choices="English,Polski" index="0" name="Language" class="buttonBeside" style="font-size: 20px;" />
+                    <engine:Label text="Accessibility" style="-unity-text-align: upper-center;" />
                     <engine:VisualElement name="Case">
                         <engine:VisualElement name="Horizontal" style="flex-grow: 1; align-items: auto; align-self: auto; align-content: flex-start; flex-direction: row;">
                             <engine:Label text="Uppercase" name="CaseLabel" style="align-items: flex-start; align-self: center; justify-content: flex-start;">
@@ -22,7 +25,7 @@
                             <engine:SliderInt value="64" high-value="200" fill="true" low-value="1" name="ZoomDeadZoneSlider" class="SliderMenu" style="min-width: 100px; margin-left: 10px; margin-top: 1px; margin-right: 1px; margin-bottom: 1px; align-self: stretch;" />
                         </engine:VisualElement>
                     </engine:VisualElement>
-                    <engine:Label text="Words On Board" style="margin-top: 14px;" />
+                    <engine:Label text="Words On Board Are:" style="margin-top: 14px; -unity-text-align: upper-center;" />
                     <engine:VisualElement style="flex-grow: 1; background-color: rgba(120, 120, 120, 0.73); border-top-width: 3px; border-right-width: 3px; border-bottom-width: 3px; border-left-width: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; border-bottom-left-radius: 3px;">
                         <engine:VisualElement name="Diagonal" style="flex-grow: 1; flex-direction: row;">
                             <engine:Label text="✔" name="Tick" style="border-left-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-top-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-top-width: 2px; border-right-width: 2px; border-bottom-width: 2px; border-left-width: 2px; border-top-left-radius: 2px; border-top-right-radius: 2px; border-bottom-right-radius: 2px; border-bottom-left-radius: 2px; color: rgb(0, 217, 255); min-width: 20px;" />
