--- a/Assets/UI Toolkit/MainMenu.uxml
+++ b/Assets/UI Toolkit/MainMenu.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/Styles/StyleMainText.uss?fileID=7433441132597879392&amp;guid=a30bf1fe6ffa7c048b5a8596bc92c73b&amp;type=3#StyleMainText" />
-    <ui:VisualElement style="flex-grow: 1; margin-top: 1%; margin-right: 1%; margin-bottom: 1%; margin-left: 1%;">
+    <ui:VisualElement class="roboto-font" style="flex-grow: 1; margin-top: 1%; margin-right: 1%; margin-bottom: 1%; margin-left: 1%;">
         <ui:VisualElement style="flex-grow: 1;">
             <ui:VisualElement style="flex-grow: 1; margin-top: 10%; align-items: center;">
                 <ui:VisualElement class="header text_white" style="flex-grow: 1;">
