--- a/Assets/UI Toolkit/PauseMenu.uxml
+++ b/Assets/UI Toolkit/PauseMenu.uxml
@@ -1,7 +1,7 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/Styles/StyleMainText.uss?fileID=7433441132597879392&amp;guid=a30bf1fe6ffa7c048b5a8596bc92c73b&amp;type=3#StyleMainText" />
     <Style src="project://database/Assets/UI%20Toolkit/Styles/SliderCustom.uss?fileID=7433441132597879392&amp;guid=02e4696af2941ce40b9fa8f15f9c85ba&amp;type=3#SliderCustom" />
-    <engine:VisualElement name="Screen" style="flex-grow: 1; background-color: rgba(11, 10, 10, 0.4);">
+    <engine:VisualElement name="Screen" class="roboto-font" style="flex-grow: 1; background-color: rgba(11, 10, 10, 0.4);">
         <engine:VisualElement name="Content" class="text_aliceblue text_white" style="flex-grow: 1; margin-top: 10%; margin-right: 5px; margin-bottom: 5px; margin-left: 5px; align-self: center;">
             <engine:Label text="Menu" name="Label" class="title" style="align-items: auto; align-self: center; margin-bottom: 10px;" />
             <engine:VisualElement class="header">
